--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
         </main>
 
         <footer>
-            <p>Datos extraídos en tiempo real de <a href="https://dataprecio.com" target="_blank">dataprecio.com</a></p>
+            <p>Datos extraídos de <a href="https://dataprecio.com" target="_blank">dataprecio.com</a></p>
         </footer>
     </div>
     <script src="script.js"></script>
